# taigi-converter

./: .gitignore  CLAUDE.md  CNAME  README.md  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
src/: converter.js  index.js  phonetics.js  poj.js  segmenter.js  tables.js  zhuyin.js
src/taigi_converter/: __init__.py  cli.py  converter.py  phonetics.py  poj.py  tables.py  tl.py  zhuyin.py
tests/: cli.test.js  converter.test.js  phonetics.test.js  poj.test.js  segmenter.test.js  test_converter.py  test_phonetics.py  test_poj.py  test_tl.py  test_zhuyin.py  tl.test.js  zhuyin.test.js
web/: index.html
